fix overflow slider

--- a/components/project-tasks-slider/project-tasks-slider.scss
+++ b/components/project-tasks-slider/project-tasks-slider.scss
@@ -84,4 +84,8 @@
   .project-tasks-slider-circle-white {
     z-index: -2;
   }
+
+  .swiper-project-tasks-slider {
+    overflow: visible;
+  }
 }
